--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>33.4.5-jre</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
