Capitulo 5 y Capitulo 6 -Vinculacion con Keycloack-

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=API_springboot
-server.port=8888
+server.port=8080
+spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8180/realms/Coopsbot
 spring.profiles.active=dev
