Capitulo 6: Documentacion y refactorizacion con SPRING Rest Docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=API_springboot
 server.port=8080
 spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8180/realms/Coopsbot
 spring.profiles.active=dev
+
+com.c4-soft.springaddons.oidc.ops[0].iss=  http://localhost:8180/realms/Coopsbot
+com.c4-soft.springaddons.oidc.ops[0].authorities[0].path=$.realm_access.roles
+com.c4-soft.springaddons.oidc.ops[0].authorities[0].prefix=ROLE_
