--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.c4-soft.springaddons</groupId>
+			<artifactId>spring-addons-starter-oidc</artifactId>
+			<version>7.1.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.c4-soft.springaddons</groupId>
+			<artifactId>spring-addons-starter-oidc-test</artifactId>
+			<version>7.1.9</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -73,15 +85,102 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
 
-	<build>
-		<plugins>
+		<dependency>
+			<groupId>org.springframework.restdocs</groupId>
+			<artifactId>spring-restdocs-mockmvc</artifactId>
+			<scope>test</scope>
+			</dependency>
+		</dependencies>
+		
+
+		<build>
+			<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+			<!-- tag::surefire[] -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<configuration>
+				<redirectTestOutputToFile>true</redirectTestOutputToFile>
+				<printSummary>false</printSummary>
+				<includes>
+					<include>**/*.java</include>
+				</includes>
+				</configuration>
+			</plugin>
+			<!-- end::surefire[] -->
+			</plugins>
+			<!-- tag::asciidoctor-plugin-management[] -->
+			<pluginManagement>
+			<plugins>
+				<plugin>
+				<groupId>org.asciidoctor</groupId>
+				<artifactId>asciidoctor-maven-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+					<id>generate-docs</id>
+					<phase>prepare-package</phase>
+					<goals>
+						<goal>process-asciidoc</goal>
+					</goals>
+					<configuration>
+						<backend>html</backend>
+					</configuration>
+					</execution>
+					<execution>
+					<id>generate-docs-pdf</id>
+					<phase>prepare-package</phase>
+					<goals>
+						<goal>process-asciidoc</goal>
+					</goals>
+					<configuration>
+						<backend>pdf</backend>
+					</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+					<groupId>org.springframework.restdocs</groupId>
+					<artifactId>spring-restdocs-asciidoctor</artifactId>
+					<version>${spring-restdocs.version}</version>
+					</dependency>
+					<dependency>
+					<groupId>org.asciidoctor</groupId>
+					<artifactId>asciidoctorj-pdf</artifactId>
+					<version>2.3.9</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<doctype>book</doctype>
+					<attributes>
+					<project-version>${project.version}</project-version>
+					</attributes>
+				</configuration>
+				</plugin>
+			</plugins>
+			</pluginManagement>
+			<!-- end::asciidoctor-plugin-management[] -->
 	</build>
+
+
+	<profiles>
+		<profile>
+		<id>ci</id>
+		<build>
+			<plugins>
+			<plugin>
+				<groupId>org.asciidoctor</groupId>
+				<artifactId>asciidoctor-maven-plugin</artifactId>
+			</plugin>
+			</plugins>
+		</build>
+		</profile>
+	</profiles>
 
 </project>
