Capitulo 7 Por alguna extraña razon no me deja correr las migraciones, o es mas no se por que, tambien hubo incompatibilidades con postgre pero se pudo solucionar

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,11 @@
 version: '3'
 services:
+  db:
+    image: 'postgres:16.0'
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: my-postgres-db-pwd
   identity:
     image: 'quay.io/keycloak/keycloak:22.0.1'
     entrypoint: /opt/keycloak/bin/kc.sh start-dev --import-realm
