--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,20 @@ spring.profiles.active=dev
 com.c4-soft.springaddons.oidc.ops[0].iss=  http://localhost:8180/realms/Coopsbot
 com.c4-soft.springaddons.oidc.ops[0].authorities[0].path=$.realm_access.roles
 com.c4-soft.springaddons.oidc.ops[0].authorities[0].prefix=ROLE_
+
+spring.datasource.url=jdbc:postgresql://localhost/copsbootdb
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=my-postgres-db-pwd
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+
+
+
+spring.flyway.ignoreUnknownDatabase=true
+spring.flyway.enabled=false
