--- a/pom.xml
+++ b/pom.xml
@@ -29,165 +29,171 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>com.c4-soft.springaddons</groupId>
-			<artifactId>spring-addons-starter-oidc</artifactId>
-			<version>7.1.9</version>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <!--tag::oauth2[] -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+    </dependency>
+    <!-- end::oauth2[] -->
+    <!--tag::springaddons[] -->
+    <dependency>
+      <groupId>com.c4-soft.springaddons</groupId>
+      <artifactId>spring-addons-starter-oidc</artifactId>
+      <version>7.1.9</version>
+    </dependency>
+    <!--end::springaddons[] -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
 
-		<dependency>
-			<groupId>com.c4-soft.springaddons</groupId>
-			<artifactId>spring-addons-starter-oidc-test</artifactId>
-			<version>7.1.9</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>33.4.5-jre</version>
-		</dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.1-jre</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-		</dependency>
+    <!-- tag::postgresql[] -->
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <scope>runtime</scope>
+    </dependency>
+    <!-- end::postgresql[] -->
+    <!-- tag::flyway[] -->
+    <dependency>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-database-postgresql</artifactId>
+        <version>10.20.1</version>
+    </dependency>
+    <!-- end::flyway[] -->
 
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-			<version>10.13.0</version>
-		</dependency>
-				
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.restdocs</groupId>
-			<artifactId>spring-restdocs-mockmvc</artifactId>
-			<scope>test</scope>
-			</dependency>
-		</dependencies>
-		
-
-		<build>
-			<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<!-- tag::surefire[] -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
-				<configuration>
-				<redirectTestOutputToFile>true</redirectTestOutputToFile>
-				<printSummary>false</printSummary>
-				<includes>
-					<include>**/*.java</include>
-				</includes>
-				</configuration>
-			</plugin>
-			<!-- end::surefire[] -->
-			</plugins>
-			<!-- tag::asciidoctor-plugin-management[] -->
-			<pluginManagement>
-			<plugins>
-				<plugin>
-				<groupId>org.asciidoctor</groupId>
-				<artifactId>asciidoctor-maven-plugin</artifactId>
-				<version>2.2.1</version>
-				<executions>
-					<execution>
-					<id>generate-docs</id>
-					<phase>prepare-package</phase>
-					<goals>
-						<goal>process-asciidoc</goal>
-					</goals>
-					<configuration>
-						<backend>html</backend>
-					</configuration>
-					</execution>
-					<execution>
-					<id>generate-docs-pdf</id>
-					<phase>prepare-package</phase>
-					<goals>
-						<goal>process-asciidoc</goal>
-					</goals>
-					<configuration>
-						<backend>pdf</backend>
-					</configuration>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-					<groupId>org.springframework.restdocs</groupId>
-					<artifactId>spring-restdocs-asciidoctor</artifactId>
-					<version>${spring-restdocs.version}</version>
-					</dependency>
-					<dependency>
-					<groupId>org.asciidoctor</groupId>
-					<artifactId>asciidoctorj-pdf</artifactId>
-					<version>2.3.9</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<doctype>book</doctype>
-					<attributes>
-					<project-version>${project.version}</project-version>
-					</attributes>
-				</configuration>
-				</plugin>
-			</plugins>
-			</pluginManagement>
-			<!-- end::asciidoctor-plugin-management[] -->
-	</build>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.c4-soft.springaddons</groupId>
+      <artifactId>spring-addons-starter-oidc-test</artifactId>
+      <version>7.1.9</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- tag::spring-restdocs-mockmvc[] -->
+    <dependency>
+      <groupId>org.springframework.restdocs</groupId>
+      <artifactId>spring-restdocs-mockmvc</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <!-- end::spring-restdocs-mockmvc[] -->
+  </dependencies>
 
 
-	<profiles>
-		<profile>
-		<id>ci</id>
-		<build>
-			<plugins>
-			<plugin>
-				<groupId>org.asciidoctor</groupId>
-				<artifactId>asciidoctor-maven-plugin</artifactId>
-			</plugin>
-			</plugins>
-		</build>
-		</profile>
-	</profiles>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <!-- tag::surefire[] -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <redirectTestOutputToFile>true</redirectTestOutputToFile>
+          <printSummary>false</printSummary>
+          <includes>
+            <include>**/*.java</include>
+          </includes>
+        </configuration>
+      </plugin>
+      <!-- end::surefire[] -->
+    </plugins>
+    <!-- tag::asciidoctor-plugin-management[] -->
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.asciidoctor</groupId>
+          <artifactId>asciidoctor-maven-plugin</artifactId>
+          <version>2.2.1</version>
+          <executions>
+            <execution>
+              <id>generate-docs</id>
+              <phase>prepare-package</phase>
+              <goals>
+                <goal>process-asciidoc</goal>
+              </goals>
+              <configuration>
+                <backend>html</backend>
+              </configuration>
+            </execution>
+            <execution>
+              <id>generate-docs-pdf</id>
+              <phase>prepare-package</phase>
+              <goals>
+                <goal>process-asciidoc</goal>
+              </goals>
+              <configuration>
+                <backend>pdf</backend>
+              </configuration>
+            </execution>
+          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>org.springframework.restdocs</groupId>
+              <artifactId>spring-restdocs-asciidoctor</artifactId>
+              <version>${spring-restdocs.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>org.asciidoctor</groupId>
+              <artifactId>asciidoctorj-pdf</artifactId>
+              <version>2.3.9</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <doctype>book</doctype>
+            <attributes>
+              <project-version>${project.version}</project-version>
+            </attributes>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <!-- end::asciidoctor-plugin-management[] -->
+  </build>
+  <!--tag::ci-profile[] -->
+  <profiles>
+    <profile>
+      <id>ci</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.asciidoctor</groupId>
+            <artifactId>asciidoctor-maven-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
