--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,18 @@ spring.datasource.password=my-postgres-db-pwd
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
-spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+
+# Configuracion actual!!!!!!!!
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration/postgre
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
 
 
+# spring.jpa.hibernate.ddl-auto=update
+# spring.flyway.enabled=false
 
-spring.flyway.ignoreUnknownDatabase=true
-spring.flyway.enabled=false
+# spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
+# spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
