--- a/pom.xml
+++ b/pom.xml
@@ -39,19 +39,15 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
-    <!--tag::oauth2[] -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
     </dependency>
-    <!-- end::oauth2[] -->
-    <!--tag::springaddons[] -->
     <dependency>
       <groupId>com.c4-soft.springaddons</groupId>
       <artifactId>spring-addons-starter-oidc</artifactId>
       <version>7.1.9</version>
     </dependency>
-    <!--end::springaddons[] -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
@@ -67,20 +63,17 @@
       <version>31.1-jre</version>
     </dependency>
 
-    <!-- tag::postgresql[] -->
     <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <scope>runtime</scope>
     </dependency>
-    <!-- end::postgresql[] -->
-    <!-- tag::flyway[] -->
+    <!-- Esta dependencia fue la que se actualizo para las migraciones del capitulo 7 -->
     <dependency>
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-database-postgresql</artifactId>
         <version>10.20.1</version>
     </dependency>
-    <!-- end::flyway[] -->
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -98,13 +91,35 @@
       <version>7.1.9</version>
       <scope>test</scope>
     </dependency>
-    <!-- tag::spring-restdocs-mockmvc[] -->
     <dependency>
       <groupId>org.springframework.restdocs</groupId>
       <artifactId>spring-restdocs-mockmvc</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- end::spring-restdocs-mockmvc[] -->
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-testcontainers</artifactId>
+      <version>3.2.5</version> <!-- Usa la última versión compatible -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>1.19.7</version> <!-- Última versión al momento -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>1.19.7</version>
+      <scope>test</scope>
+    </dependency>
+
+
+
+
+
   </dependencies>
 
 
