Capitulo 9 completado Se realizo la modificacion a los reportes y se agrego la validacion del archivo, tal y como estaba en el pdf En los entornos de prueba funciono correctamente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration/postgre
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
+
+# Configuracion de archivos
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
