--- a/pom.xml
+++ b/pom.xml
@@ -100,13 +100,13 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-testcontainers</artifactId>
-      <version>3.2.5</version> <!-- Usa la última versión compatible -->
+      <version>3.2.5</version> 
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>1.19.7</version> <!-- Última versión al momento -->
+      <version>1.19.7</version> 
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -116,7 +116,20 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.dasniko</groupId>
+      <artifactId>testcontainers-keycloak</artifactId>
+      <version>3.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <scope>test</scope>
+    </dependency>
 
+    
 
 
 
@@ -129,7 +142,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      <!-- tag::surefire[] -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -142,9 +154,7 @@
           </includes>
         </configuration>
       </plugin>
-      <!-- end::surefire[] -->
     </plugins>
-    <!-- tag::asciidoctor-plugin-management[] -->
     <pluginManagement>
       <plugins>
         <plugin>
@@ -194,9 +204,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
-    <!-- end::asciidoctor-plugin-management[] -->
   </build>
-  <!--tag::ci-profile[] -->
   <profiles>
     <profile>
       <id>ci</id>
