Docker compose prod hecho y funcionando parcialmente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=API_springboot
 server.port=8080
-spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8180/realms/Coopsbot
+spring.security.oauth2.resourceserver.jwt.issuer-uri =  http://identity:8080/realms/Coopsbot
 spring.profiles.active=dev
 
-com.c4-soft.springaddons.oidc.ops[0].iss=  http://localhost:8180/realms/Coopsbot
+com.c4-soft.springaddons.oidc.ops[0].iss=  http://identity:8080/realms/Coopsbot
 com.c4-soft.springaddons.oidc.ops[0].authorities[0].path=$.realm_access.roles
 com.c4-soft.springaddons.oidc.ops[0].authorities[0].prefix=ROLE_
 
-spring.datasource.url=jdbc:postgresql://localhost/copsbootdb
+spring.datasource.url=jdbc:postgresql://db:5432/copsbootdb
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=my-postgres-db-pwd
