--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,15 +6,17 @@ services:
       - 5432:5432
     environment:
       POSTGRES_PASSWORD: my-postgres-db-pwd
+      POSTGRES_DB: copsbootdb
   identity:
-    image: 'quay.io/keycloak/keycloak:22.0.1'
-    entrypoint: /opt/keycloak/bin/kc.sh start-dev --import-realm
+    image: quay.io/keycloak/keycloak:22.0.1
+    container_name: keycloak
+    command: "start-dev --import-realm"
     ports:
-      - '8180:8080'
+      - "8180:8080"
     environment:
-      KEYCLOAK_LOGLEVEL: 'INFO'
-      KEYCLOAK_ADMIN: 'admin'
-      KEYCLOAK_ADMIN_PASSWORD: 'admin-secret'
-      KC_HOSTNAME: 'localhost'
-      KC_HEALTH_ENABLED: 'true'
-      KC_METRICS_ENABLED: 'true'
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin-secret
+      KC_HEALTH_ENABLED: "true"
+      KC_METRICS_ENABLED: "true"
+    volumes:
+      - ./realm-export.json:/opt/keycloak/data/import/realm-export.json:ro
